package pt.ipp.isep.dei.esoft.project.domain;

public enum GreenSpaceType {
    /**
     * A garden, typically a small outdoor area with plants and sometimes a lawn.
     */
    GARDEN,

    /**
     * A medium-sized park, typically an area with more space and facilities than a garden, but less than a large park.
     */
    MEDIUM_SIZED_PARK,

    /**
     * A large-sized park, typically an area with a lot of space and facilities, such as walking paths, playgrounds, and picnic areas.
     */
    LARGE_SIZED_PARK;
}