@startuml

skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype ortho

skinparam classAttributeIconSize 0


class ApplicationSession {
    + static getInstance()
    + getCurrentSession()
}

class UserSession {
    + getUserEmail()
}

class GreenSpace {
    - name: String
    - area: double
    - type: GreenSpaceType

    + GreenSpace(name: String, area: double, type: GreenSpaceType)
    + registerGreenSpace(repo: GreenSpaceRepository): void
    + getName(): String
    + getArea(): double
    + getType(): GreenSpaceType
    {abstract} + displayDetails(): void
}

class Garden {
    + Garden(name: String, area: double)
    + displayDetails(): void
}

class MediumSizedPark {
    + MediumSizedPark(name: String, area: double)
    + displayDetails(): void
}

class LargeSizedPark {
    + LargeSizedPark(name: String, area: double)
    + displayDetails(): void
}

class GreenSpaceRepository {
    - greenSpaces: List<GreenSpace>

    + addGreenSpace(greenSpace: GreenSpace): void
    + getGreenSpaces(): List<GreenSpace>
}

class RegisterGreenSpaceController {
    - repo: GreenSpaceRepository

    + RegisterGreenSpaceController(repo: GreenSpaceRepository)
    + registerGreenSpace(greenSpace: GreenSpace): void
    + getAllGreenSpaces(): List<GreenSpace>
}

enum GreenSpaceType {
    GARDEN
    MEDIUM_SIZED_PARK
    LARGE_SIZED_PARK
}

ApplicationSession --> "1" UserSession : userSession

RegisterGreenSpaceController ..> ApplicationSession
RegisterGreenSpaceController ..> UserSession

Repositories -> Repositories : instance

RegisterGreenSpaceUI .> RegisterGreenSpaceController

RegisterGreenSpaceController .> Repositories : repositories

Repositories -> "1" GreenSpaceRepository

RegisterGreenSpaceController ..> GreenSpaceRepository : uses

GreenSpaceType --> Garden : can be
GreenSpaceType --> MediumSizedPark : can be
GreenSpaceType --> LargeSizedPark : can be

GreenSpace --> "1" GreenSpaceType : has

GreenSpaceRepository "1" --> "*" GreenSpace : GreenSpaces

@enduml
